# VeriRAG

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/verirag/cli/: main.py
tests/unit/: test_cli_smoke.py
